Написана основная часть справочного руководства.

--- a/index/Scripts/python/index/doc/help.adoc
+++ b/index/Scripts/python/index/doc/help.adoc
@@ -2,12 +2,11 @@
 :doctype: book
 :toc2: left
 :toc-title: Содержание
-:note-caption: Примечание
-:warning-caption: Важно!
 :last-update-label: Редакция от
 :version-label: Версия
 :toclevels: 4
 :sectnumlevels: 4
+:icons: font
 
 
 = Перечень элементов
@@ -28,9 +27,397 @@
 списка цепей проекта KiCad. +
 В документ встроены необходимые шрифты.
 
+Чтобы получить перечень элементов для проекта KiCad нужно пройти следующие
+шаги:
+
+1) заполнить поля компонентов схемы должным образом и обновить список цепей; +
+2) на основе шаблона создать новый документ и сохранить его в каталоге проекта
+KiCad; +
+3) настроить параметры формирования перечня; +
+4) запустить макрос построения перечня; +
+5) запустить макрос заполнения основной надписи; +
+6) при необходимости, поправить форматирование и содержимое перечня.
+
+
+== Поля компонентов схемы
+
+При формировании перечня элементов для неподготовленной схемы проекта KiCad
+будут использованы только два стандартных поля компонентов:
+
+Обозначение ::
+помещается в графу _Поз. обозначение_
+Значение ::
+помещается в графу _Наименование_
+
+[NOTE]
+====
+
+Если поле компонента, соответствующее параметру _Поля->Наименование_, пусто или
+отсутствует, то вместо него используется поле _Значение_.
+
+====
+
+Для получения полноценного перечня элементов, компонентам схемы следует
+добавить несколько пользовательских полей. Количество дополнительных полей и их
+содержимое зависит от типа компонента и от данных, которые должны быть
+отображены в перечне элементов. По умолчанию макросами используются следующие
+поля компонентов:
+
+Обозначение ::
+стандартное поле компонента, помещается в графу _Поз.  обозначение_.
+Тип ::
+пользовательское поле, в котором хранится описание типа компонента,
+например, _Резистор (Резисторы)_. Значение этого поля указывается в графе
+_Наименование_ и выступает в виде заголовка однотипных компонентов. +
+В зависимости от параметров построения перечня, тип компонента может
+указываться как в единственном, так и в множественном числе. Поэтому формат
+поля _Тип_ имеет сложный вид: +
+`Тип_в_единственном_числе (Тип_в_множественном_числе)` +
+Сначала указывается форма в единственном числе, за которой через пробел и в
+круглых скобках следует форма в множественном числе. Если содержимое не
+соответствует описанному формату, то оно будет использовано полностью, как в
+единственной, так и в множественной формах. Но при активном режиме
+совместимости с _kicadbom2spec_, будет предпринята попытка найти формы
+единственного и множественного числа в словаре групп из конфигурационного файла
+приложения _kicadbom2spec_.
+Наименование ::
+пользовательское поле, в котором содержится полное наименование
+компонента. Содержимое этого поля помещается в графу _Наименование_, в строку с
+соответствующим _Обозначением_. Если поле пусто или отсутствует, то вместо него
+используется стандартное поле _Значение_.
+Документ ::
+пользовательское поле, в котором указывается ГОСТ, ТУ или другой
+документ, относящийся к компоненту. Так как в зависимости от параметров
+построения перечня _Документ_ может указываться как после _Наименования_
+компонента, так и в заголовке после _Типа_, то это значение хранится в
+отдельном поле.
+Примечание ::
+пользовательское поле, содержимое которого помещается в
+одноимённую графу перечня элементов.
+Подбирают при регулировании ::
+пользовательское поле. Содержимое этого поля не
+имеет значения, важен сам факт наличия данного поля. Если компонент содержит
+поле _Подбирают при регулировании_, то к его обозначению добавляется суффикс в
+виде символа ***** (звёздочка). В противном случае, никакие изменения не
+вносятся.
+
+Предложенные наименования полей можно изменить на вкладке _Поля_ диалогового
+окна параметров макросов.
+
+Значение поля компонента может включать значения других полей этого же
+компонента. Для этого используют _Шаблоны_ -- текстовые конструкции, которые
+обрабатываются особым образом.
+
+
+=== Шаблоны
+
+Шаблоном называется строка текста, содержащая как минимум одну конструкцию
+следующего вида:
+
+ {префикс|поле|суффикс}
+
+префикс ::
+символы между `{` и `|` будут добавлены к значению поля в виде префикса
+поле ::
+наименование поля, значение которого должно быть подставлено вместо конструкции
+`{||}`
+суффикс ::
+символы между `|` и `}` будут добавлены к значению поля в виде суффикса
+
+В шаблоне символы `{`, `|` и `}` имеют особое значение. Чтобы использовать их
+как обычные текстовые символы, перед ними нужно добавлять обратную косую черту:
+`\{`, `\|` или `\}`.
+
+Шаблон может содержать несколько конструкций вида `{||}`.
+
+Если указанное поле пусто или отсутствует, то конструкция `{||}` просто
+удаляется из текста.
+
+Поле, указанное в конструкции `{||}`, тоже может содержать шаблон. Но эти
+шаблоны не должны ссылаться друг на друга, иначе возникнет рекурсивное
+зацикливание.
+
+Доступ к стандартным полям производится с помощью следующих имён:
+
+* *Обозначение*
+* *Значение*
+* *Посад.место*
+* *Документация*
+
+Рассмотрим пример шаблона для поля _Наименование_ резистора:
+
+ МЛТ-0,5-{|Значение|}{-|Класс точности|}-В
+
+Здесь имеются две конструкции `{||}`, т.е. будут подставлены значения двух
+полей _Значение_ и _Класс точности_. Значение не имеет ни префикса, ни
+суффикса, а к классу точности будет добавлен префикс `-`. +
+Предположим, сопротивление резистора равно `4,7кОм`, а класс точности `±5%`,
+тогда шаблон будет преобразован в строку следующего вида:
+
+ МЛТ-0,5-4,7кОм-±5%-В
+
+Если класс точности не указан или такое поле отсутствует в компоненте, то
+строка будет следующей:
+
+ МЛТ-0,5-4,7кОм-В
+
+т.е. класс точности и его префикс отсутствует в итоговом значении.
+
+
+== Параметры
+
+Оптимальный вид документа ::
+Если отмечено, то при открытии документа параметры отображения будут настроены
+для обеспечения наилучшего вида содержимого:
+* _Границы текста_ -- скрыть
+* _Границы таблиц_ -- скрыть
+* _Затенение полей_ -- отключить
+* _Скрытые абзацы_ -- скрыть
+* _Подробные всплывающие подсказки_ -- включить
+* _Панель инструментов_ -- расположить под стандартными
+
+=== Перечень элементов
+Файл с данными о схеме ::
+В случае с KiCad, источником данных о схеме является файл списка цепей. +
+Если файл не указан, то при запуске макроса `Построить перечень` или
+`Заполнить осн. надпись` будет предпринята попытка найти файл списка цепей по
+имени файла проекта (ищется файл _*.pro_, заменяется расширение _pro_ на _net_
+и проверяется наличие файла с полученным именем и расширением). Если файл
+списка цепей найти не удастся, будет показан диалог выбора файла. +
+Поддерживаются файлы с расширением:
+* _*.net_ -- формат Pcbnew `Eeschema -> Инструменты -> Сформировать файл
+списка цепей...`
+* _*.xml_ -- вспомогательный `Eeschema -> Инструменты -> Сформировать
+перечень элементов...`
+
+[NOTE]
+====
+
+Вспомогательный файл списка цепей создаётся перед формированием перечня
+элементов средствами _Eeschema_ и остаётся в каталоге проекта как побочный. В
+__*.net__-файле и __*.xml__-файле содержатся одни и те же данные, только в
+разных форматах.
+
+====
+
+Количество пустых строк между компонентами с разными обозначениями ::
+Указанное количество пустых строк будет вставлено между компонентами, которые
+отличаются буквенной частью обозначения. Но, если компоненты имеют одинаковый
+тип и установлен параметр _Объединить однотипные группы_, то пустые строки
+между ними вставлены не будут.
+
+Количество пустых строк между компонентами разного типа ::
+Указанное количество пустых строк будет вставлено между компонентами, у которых
+совпадает буквенная часть обозначения, но отличается тип.
+
+Минимально допустимый масштаб по ширине (%) ::
+Если текст не помещается в графе таблицы, то уменьшается масштаб символов по
+ширине. Когда масштаб становится меньше указанного значения, текст разбивается
+на части и размещается на последующих строках.
+
+Добавить единицы измерения ::
+Если для резисторов, конденсаторов или индуктивностей указаны только значения и
+данная опция включена, то к значениям будут добавлены соответствующие единицы
+измерения (Ом, Ф, Гн). При этом, множители приводятся к общему виду:
+
+[width=40%,options="header"]
+|===
+|На схеме |В перечне
+2+^|**Конденсаторы**
+|1.2 |1,2мкФ
+|1200 |1200пФ
+|1н2 |1,2нФ
+|12 μF |12мкФ
+|120u |120мкФ
+2+^|**Резисторы**
+|4.7 |4,7Ом
+|4R7 |4,7Ом
+|R47 |0,47Ом
+|470 |470Ом
+|4,7k |4,7кОм
+|4.7 kOhm |4,7кОм
+|4,7 kΩ |4,7кОм
+|4M7 |4,7МОм
+2+^|**Дроссели**
+|910 |910мкГн
+|910u |910мкГн
+|910мк |910мкГн
+|9m1 |9,1мГн
+|910 uH |910мкГн
+|===
+
+Вставить пробел перед единицами измерения ::
+Если отмечено, то между цифровой частью значения и единицами измерения (включая
+множитель) будет вставлен пробел.
+
+Объединить однотипные группы ::
+По умолчанию, группой считается совокупность компонентов с одинаковой буквенной
+частью обозначения. Если отмечено, то идущие подряд компоненты с одинаковым
+типом будут объединены в одну группу, даже если буквенная часть их обозначений
+отличается.
+
+Указать документ в заголовке группы ::
+По умолчанию, в качестве заголовка группы компонентов выступает _Тип_ в
+множественном числе. +
+Если отмечено, то в заголовке, после _Типа_, будет указан _Документ_ (ГОСТ, ТУ,
+...). Если в группе компоненты имеют разные документы, то перед каждым
+документом в заголовке будет указана часть наименования, необходимая для
+идентификации соответствующих компонентов.
+
+Формировать заголовок для каждой группы ::
+По умолчанию, заголовок формируется только если группа содержит более чем один
+компонент. +
+Если же группа состоит из одного компонента, заголовок не формируется, а _Тип_,
+в единственном числе, указывается перед _Наименованием_. Если отмечено, то
+заголовок будет сформирован для каждой группы, даже если она состоит из одного
+компонента.
+
+Добавить пустую строку после заголовка группы ::
+Если отмечено, то между заголовком и первым компонентом группы будет вставлена
+одна пустая строка.
+
+Добавить лист регистрации изменений, если количество листов больше ... ::
+Если отмечено и количество листов документа превышает указанное число, то в
+конец документа будет добавлен лист регистрации изменений. Если в процессе
+редактирования количество листов станет меньше указанного значения, то лист
+регистрации изменения будет удалён.
+
+
+=== Поля
+
+Тип ::
+Значение поля с указанным именем будет использовано для обозначения типа
+компонента, например, _Резистор (Резисторы)_.
+
+Наименование ::
+Значение поля с указанным именем будет помещено в графу _Наименование_.
+
+Документ ::
+Значение поля с указанным именем будет добавлено к _Наименованию_, указывая на
+ГОСТ, ТУ или прочий документ.
+
+Примечание ::
+Значение поля с указанным именем будет помещено в графу _Примечание_.
+
+====
+
+В обозначенных выше полях допускается использование _шаблонов_. Благодаря этому
+можно комбинировать значения нескольких полей.
+
+Если указанное в поле параметра значение не содержит конструкций `{||}`, то оно
+воспринимается как наименование поля и в перечне будет использовано значение
+данного поля.
+
+Если же в значении параметра имеется хотя бы одна конструкция `{||}`, то такое
+значение будет обработано как _шаблон_ и в перечень попадёт преобразованный
+текст с подставленными значениями указанных полей.
+
+Для примера можно рассмотреть _Наименование_ в режиме совместимости с
+_kicadbom2spec_:
+
+ {|Марка|-}{|Значение|}{-|Класс точности|}{-|Тип|}
+
+Здесь наименование состоит из нескольких частей, каждая из которых храниться в
+отдельном поле компонента.
+
+*Примечание:* при нажатии кнопки `Установить значения, совместимые с
+kicadbom2spec` шаблон _Наименования_ будет построен с учётом разделителей,
+указанных в конфигурационном файле приложения _kicadbom2spec_ (если он
+существует).
+
+Обратите внимание, значения:
+
+ Наименование
+
+и
+
+ {|Наименование|}
+
+в итоге дадут одинаковый результат -- значение поля с именем _Наименование_. Но
+обработаны они будут по разному, в первом случае -- значение воспринимается как
+название поля, а во втором -- как шаблон.
+
+====
+
+Подбирают при регулировании ::
+Если компонент содержит поле с указанным именем, то возле его обозначения в
+перечне, будет указан символ *****.
+
+Установить значения по умолчанию ::
+Установить параметрам полей значения по умолчанию.
+
+Установить значения, совместимые с kicadbom2spec ::
+Настроить параметры полей так, чтобы обеспечить формирование перечня элементов
+для схем, оформленных с помощью приложения _kicadbom2spec_.
+
+Режим совместимости с kicadbom2spec ::
+Если отмечено, то при формировании перечня элементов из файла настроек
+приложения _kicadbom2spec_ будут использованы данные о разделителях и словарь
+наименований групп.
+
+=== Основная надпись
+
+Преобразовать наименование документа ::
+Если отмечено, тип схемы в наименовании документа будет заменён надписью
+_Перечень элементов_. +
+В противном случае, наименование останется без изменений.
+
+Преобразовать обозначение документа ::
+Если отмечено, к типу схемы в обозначении документа будет добавлен префикс _П_
+(перечень). +
+В противном случае, обозначение останется без изменений.
+
+Автоматически заполнить графу _Перв. примен._ ::
+Если отмечено, в графу первичной применяемости будет записано обозначение
+документа без кода документа. +
+В противном случае, графа останется без изменений.
+
+
+== Панель инструментов
+
+Построить перечень ::
+запустить макрос построения перечня элементов. Содержимое таблицы будет
+перезаписано.
+
+Очистить перечень ::
+запустить макрос очистки перечня элементов. Таблица будет удалена и построена
+заново.
+
+---
+
+Заполнить осн. надпись ::
+запустить макрос заполнения основной надписи. Данные для заполнения будут взяты
+из файла списка цепей.
+
+Очистить осн. надпись ::
+запустить макрос очистки основной надписи. Содержимое граф основной надписи и
+форматной рамки будет удалено, а форматирование установлено к значениям по
+умолчанию. +
+Графы _Лист_ и _Листов_ данным макросом не затрагиваются.
+
+---
+
+Добавить/удалить лист регистрации изменений ::
+запустить макрос создания/удаления листа регистрации изменений. +
+Если лист регистрации изменений отсутствует в документе, то он будет создан в
+виде последней страницы и отделён от таблицы перечня разрывом страниц. +
+В противном случае -- лист регистрации изменений будет удалён из документа.
+
+NOTE: При выполнении данной команды отключается параметр _Добавить лист
+регистрации изменений, если количество листов больше ..._!
+
+---
+
+Параметры ::
+показать диалоговое окно для ввода параметров формирования перечня элементов.
+
+---
+
+Справка ::
+открыть справочное руководство в вэб-браузере.
+
 
 == Оформление документа
-
 
 === Стили страниц
 
@@ -46,7 +433,8 @@ _Перв. примен._
 Чтобы применить нужный стиль, нужно выполнить команду меню
 `Стили -> Управление стилями (F11)`, выбрать `Стили страниц` и двойным
 щелчком левой кнопки мыши установить один из выше перечисленных стилей. При
-смене стиля форматной рамки с заполненной основной надписью данные сохраняются.
+смене стиля форматной рамки с заполненной основной надписью -- данные
+сохраняются.
 
 Для второго и последующих листов всегда используется стиль *Последующие листы*.
 
@@ -56,25 +444,24 @@ _Перв. примен._
 
 === Основная надпись и графы форматной рамки
 
-Графы основной надписи и форматной рамки выполнены с помощью врезок. Заголовки
-граф защищены от перемещения, изменения размера и редактирования.
-
-Графы, предназначенные для ввода текста, защищены только от перемещения и
-изменения размера. Не все графы форматной рамки имеют врезки для ввода текста.
-Например, графы _Подп. и дата_, у левого края форматной рамки, врезок для ввода
-текста не имеют.
+Графы основной надписи и форматной рамки построены из врезок. Заголовки граф
+защищены от перемещения, изменения размера и редактирования. Графы,
+предназначенные для ввода текста, защищены только от перемещения и изменения
+размера. Не все графы форматной рамки имеют врезки для ввода текста. Например,
+графы _Подп. и дата_, у левого края форматной рамки, врезок для ввода текста не
+имеют.
 
 Все врезки основной надписи и форматной рамки принадлежат нижнему колонтитулу и
 хранятся в стиле страницы. Каждый стиль первого листа имеет свой собственный
 набор врезок. При внесении изменений в графу основной надписи или форматной
 рамки, соответствующие врезки остальных стилей синхронизируются посредством
-макросов. Это позволяет изменять вид первого листа не теряя данных.
+макросов. Это позволяет изменять вид первого листа без потери данных.
 
 Структура стиля второго и последующих листов аналогична. Но здесь все графы
 защищены от записи. Их значения синхронизируются с соответствующими врезками
 первого листа с помощью макросов.
 
-Номера и количество страниц подставляется автоматически средствами LibreOffice
+Номера и количество страниц подставляются автоматически средствами LibreOffice
 (используются _поля_). Если в документе лишь одна страница, то графа _Листов_,
 основной надписи первого листа, остаётся пустой. Это реализовано на основе
 _скрытого абзаца_ с условием.
@@ -94,12 +481,13 @@ _скрытого абзаца_ с условием.
 на новой странице. Заголовок таблицы повторяется на каждом листе. Это
 обеспечивается средствами LibreOffice.
 
-С помощью макросов высота строк регулируется таким образом, чтобы нижнее
-обрамление совпадало с верхней линией основной надписи.
+С помощью макросов высота строк регулируется таким образом, чтобы нижняя линия
+обрамления последней строки на странице совпадала с верхней линией основной
+надписи.
 
 В каждой графе таблицы используется отдельный стиль абзаца, соответствующий
 наименованию графы. Кроме того, для графы _Наименование_ создано два стиля
-абзацев: _Наименование_ и _Наименование (заголовок)_. Это сделано для того
+абзацев: _Наименование_ и _Наименование (заголовок)_. Это сделано для того,
 чтобы можно было задать форматирование заголовка группы элементов отличное от
 остального содержимого.
 
@@ -115,24 +503,39 @@ _скрытого абзаца_ с условием.
 автоматически отражены на остальных ячейках с таким же стелем, нужно сначала
 выделить всё содержимое ячейки и потом применить форматирование. +
 По умолчанию, наименование группы элементов (заголовок) имеет обычное
-начертание. Чтобы сделать его подчёркнутым нужно установить курсор в ячейку с
+начертание. Чтобы сделать его подчёркнутым, нужно установить курсор в ячейку с
 любым заголовком, выделить всё содержимое ячейки с помощью мыши или нажатием
 комбинации клавиш `Ctrl+A` и выполнить команду меню `Формат -> Текст ->
 Подчёркнутый (Ctrl+U)`. Заголовки всех групп элементов станут подчёркнутыми.
 
-Таблицы открытого формата документов для офисных приложений (ODF) имеют одну
-особенность о которой стоит упомянуть: после таблицы обязательно должен быть
-как минимум один абзац. То есть, документ не может заканчиваться таблицей. +
+[NOTE]
+====
+
+Открытый формат документов для офисных приложений (ODF) имеет несколько
+особенностей о которых стоит упомянуть.
+
+После таблицы обязательно должен быть как минимум один абзац. То есть, документ
+не может заканчиваться таблицей. +
 В случае с перечнем элементов возникает следующая ситуация. Если таблица
 перечня занимает всю страницу так, что обрамление последней строки совпадает с
 верхней линией основной надписи, то абзац после таблицы (который нельзя
-удалить) переносится на новую чистую страницы. Чтобы избежать подобного,
+удалить) переносится на новую чистую страницу. Чтобы избежать подобного,
 последнему абзацу присвоен особый стиль _Пустой_, который имеет минимально
 возможную высоту (приблизительно 0.5 мм), а отступ между нижним колонтитулом и
 содержимым документа уменьшен на величину данного абзаца. В таком варианте
 абзац после таблицы не переносится на следующую страницу, а просто
 накладывается на нижний колонтитул с основной надписью. Это не влияет на
-внешний вид, но при редактировании документа вручную об этом следует помнить.
+внешний вид, но при редактировании документа вручную, об этом следует помнить.
+
+Ещё одна особенность была выявлена при создании шаблона. Если таблица находится
+в самом начале документа и в ячейках используются автообновляемые стили
+абзацев, то при первом же редактировании таких ячеек, стиль страницы
+сбрасывается на стиль по умолчанию. +
+Чтобы избежать подобного поведения, перед таблицей добавляется специальный
+_Пустой_ абзац, а поле первой страницы расширено вверх на величину данного
+абзаца, чтобы таблица начиналась у верхнего края форматной рамки.
+
+====
 
 
 === Начертание текста
@@ -141,11 +544,11 @@ _скрытого абзаца_ с условием.
 абзацев. Но все они происходят от одного общего стиля -- _Текст_ и наследуют
 его свойства.
 
-Чтобы изменить начертание текста необходимо открыть окно управления стилями,
-выполнив команду меню `Стили -> Управление стилями (F11)`, и нажать кнопку
-`Стили абзацев`. В списке стилей нажать правой кнопкой мыши на пункте _Текст_ и
-в контекстном меню выбрать команду `Изменить...`. В открывшемся диалоговом
-окне, на вкладке _Шрифт_, можно установить необходимое начертание текста в поле
-_Стиль_. _Обычный_ стиль соответствует прямому начертанию, а _Курсив_ --
-наклонному. После применения изменений все надписи в документе будут
-отображаться с указанным начертанием.
+Чтобы изменить начертание текста во всём документе необходимо открыть окно
+управления стилями, выполнив команду меню `Стили -> Управление стилями (F11)`,
+и нажать кнопку `Стили абзацев`. В списке стилей нажать правой кнопкой мыши на
+пункте _Текст_ и в контекстном меню выбрать команду `Изменить...`. В
+открывшемся диалоговом окне, на вкладке _Шрифт_, можно установить необходимое
+начертание текста в поле _Стиль_. _Обычный_ стиль соответствует прямому
+начертанию, а _Курсив_ -- наклонному. После применения изменений все надписи в
+документе будут отображаться с указанным начертанием.
