--- a/index/Scripts/python/index/doc/help.adoc
+++ b/index/Scripts/python/index/doc/help.adoc
@@ -114,26 +114,34 @@ _Наименование_ и выступает в виде заголовка 
 Шаблоном называется строка текста, содержащая как минимум одну конструкцию
 следующего вида:
 
- {префикс|поле|суффикс}
+ ${поле}
+
+или
+
+ ${префикс|поле|суффикс}
 
 префикс ::
 символы между `{` и `|` будут добавлены к значению поля в виде префикса
 поле ::
 наименование поля, значение которого должно быть подставлено вместо конструкции
-`{||}`
+`${}`
 суффикс ::
 символы между `|` и `}` будут добавлены к значению поля в виде суффикса
 
-В шаблоне символы `{`, `|` и `}` имеют особое значение. Чтобы использовать их
-как обычные текстовые символы, перед ними нужно добавлять обратную косую черту:
-`\{`, `\|` или `\}`.
+Внутри конструкции `${}` символы `{`, `|` и `}` нужно экранировать с помощью
+обратной косой черты: `\{`, `\|` или `\}`. За пределами конструкции `${}`
+экранирование не требуется. Например, в шаблоне +
+`| ${\{|Посад.место|\}} |` +
+вертикальная черта в начале и конце строки экранирования не требует, так как
+находится за пределами конструкции `${}`, а вот фигурные скобки в качестве
+префикса и суффикса нужно экранировать.
 
-Шаблон может содержать несколько конструкций вида `{||}`.
+Шаблон может содержать несколько конструкций вида `${}`.
 
-Если указанное поле пусто или отсутствует, то конструкция `{||}` просто
+Если указанное поле пусто или отсутствует, то конструкция `${}` просто
 удаляется из текста.
 
-Поле, указанное в конструкции `{||}`, тоже может содержать шаблон. Но эти
+Поле, указанное в конструкции `${}`, тоже может содержать шаблон. Но эти
 шаблоны не должны ссылаться друг на друга, иначе возникнет рекурсивное
 зацикливание.
 
@@ -144,11 +152,13 @@ _Наименование_ и выступает в виде заголовка 
 * *Посад.место*
 * *Документация*
 
+Шаблоны в стандартных полях тоже обрабатываются.
+
 Рассмотрим пример шаблона для поля _Наименование_ резистора:
 
- МЛТ-0,5-{|Значение|}{-|Класс точности|}-В
+ МЛТ-0,5-${Значение}${-|Класс точности|}-В
 
-Здесь имеются две конструкции `{||}`, т.е. будут подставлены значения двух
+Здесь имеются две конструкции `${}`, т.е. будут подставлены значения двух
 полей _Значение_ и _Класс точности_. Значение не имеет ни префикса, ни
 суффикса, а к классу точности будет добавлен префикс `-`. +
 Предположим, сопротивление резистора равно `4,7кОм`, а класс точности `±5%`,
@@ -304,18 +314,18 @@ __*.net__-файле и __*.xml__-файле содержатся одни и т
 В обозначенных выше полях допускается использование _шаблонов_. Благодаря этому
 можно комбинировать значения нескольких полей.
 
-Если указанное в поле параметра значение не содержит конструкций `{||}`, то оно
+Если указанное в поле параметра значение не содержит конструкций `${}`, то оно
 воспринимается как наименование поля и в перечне будет использовано значение
 данного поля.
 
-Если же в значении параметра имеется хотя бы одна конструкция `{||}`, то такое
+Если же в значении параметра имеется хотя бы одна конструкция `${}`, то такое
 значение будет обработано как _шаблон_ и в перечень попадёт преобразованный
 текст с подставленными значениями указанных полей.
 
 Для примера можно рассмотреть _Наименование_ в режиме совместимости с
 _kicadbom2spec_:
 
- {|Марка|-}{|Значение|}{-|Класс точности|}{-|Тип|}
+ ${|Марка|-}${Значение}${-|Класс точности|}${-|Тип|}
 
 Здесь наименование состоит из нескольких частей, каждая из которых храниться в
 отдельном поле компонента.
@@ -331,7 +341,7 @@ kicadbom2spec` шаблон _Наименования_ будет построе
 
 и
 
- {|Наименование|}
+ ${Наименование}
 
 в итоге дадут одинаковый результат -- значение поля с именем _Наименование_. Но
 обработаны они будут по разному, в первом случае -- значение воспринимается как
