Добавлены два параметра пост-обработки.
1) переносить заголовки групп без элементов на следующую страницу;
2) удалять пустые строки вверху страниц.

--- a/index/Scripts/python/index/doc/help.adoc
+++ b/index/Scripts/python/index/doc/help.adoc
@@ -292,6 +292,13 @@ __*.net__-файле и __*.xml__-файле содержатся одни и т
 редактирования количество листов станет меньше указанного значения, то лист
 регистрации изменения будет удалён.
 
+Запретить заголовки групп внизу страницы ::
+Если отмечено, то заголовки групп, находящиеся внизу страницы без единого
+элемента, будут перемещены на следующую страницу.
+
+Запретить пустые строки вверху страницы ::
+Если отмечено, то пустые строки вверху страницы будут удалены.
+
 
 === Поля
 
