--- a/spec/Scripts/python/doc/help.adoc
+++ b/spec/Scripts/python/doc/help.adoc
@@ -466,7 +466,7 @@ _kicadbom2spec_ будут использованы данные о раздел
 запустить макрос построения спецификации. Содержимое таблицы будет
 перезаписано.
 
-Очистить перечень ::
+Очистить специф. ::
 запустить макрос очистки спецификации. Таблица будет удалена и построена
 заново.
 
@@ -578,10 +578,10 @@ _скрытого абзаца_ с условием.
 надписи.
 
 В каждой графе таблицы используется отдельный стиль абзаца, соответствующий
-наименованию графы. Кроме того, для графы _Наименование_ создано два стиля
-абзацев: _Наименование_ и _Наименование (заголовок)_. Это сделано для того,
-чтобы можно было задать форматирование заголовка группы элементов отличное от
-остального содержимого.
+наименованию графы. Кроме того, для графы _Наименование_ создано несколько
+стилей абзацев: _Наименование_, _Наименование (заголовок группы)_ и
+_Наименование (заголовок раздела)_. Это сделано для того, чтобы можно было
+задать форматирование заголовков отличное от остального содержимого.
 
 Стили абзацев таблицы являются _автообновляемыми_. То есть, при изменении
 форматирования одной ячейки, автоматически изменяется форматирование остальных
