Разделитель диапазона обозначений.
Добавлена возможность выбора одного из двух возможных разделителей
диапазона обозначений: дефис (-) или многоточие (…).

--- a/index/Scripts/python/doc/help.adoc
+++ b/index/Scripts/python/doc/help.adoc
@@ -237,6 +237,12 @@ __*.net__-файле и __*.xml__-файле содержатся одни и т
 ширине. Когда масштаб становится меньше указанного значения, текст разбивается
 на части и размещается на последующих строках.
 
+Разделитель диапазона обозначений ::
+Параметр позволяет выбрать один из двух возможных разделителей для диапазона
+обозначений компонентов:
+* дефис `-`
+* многоточие `…`
+
 Добавить единицы измерения ::
 Если для резисторов, конденсаторов или индуктивностей указаны только значения и
 данная опция включена, то к значениям будут добавлены соответствующие единицы
