--- a/spec/Scripts/python/doc/help.adoc
+++ b/spec/Scripts/python/doc/help.adoc
@@ -78,14 +78,14 @@
 стандартное поле компонента, помещается в графу _Примечание_.
 Тип ::
 пользовательское поле, в котором хранится описание типа компонента,
-например, _Резистор (Резисторы)_. Значение этого поля указывается в графе
+например, _Резистор {Резисторы}_. Значение этого поля указывается в графе
 _Наименование_ и выступает в виде заголовка однотипных компонентов. +
 В зависимости от параметров построения спецификации, тип компонента может
 указываться как в единственном, так и в множественном числе, поэтому формат
 поля _Тип_ имеет сложный вид: +
-`Тип_в_единственном_числе (Тип_в_множественном_числе)` +
+`Тип в единственном числе {Тип в множественном числе}` +
 Сначала указывается форма в единственном числе, за которой через пробел и в
-круглых скобках следует форма в множественном числе. Если содержимое не
+фигурных скобках следует форма в множественном числе. Если содержимое не
 соответствует описанному формату, то оно будет использовано полностью, как в
 единственной, так и в множественной формах. Но при активном режиме
 совместимости с _kicadbom2spec_, будет предпринята попытка найти формы
@@ -382,7 +382,7 @@ _Материалы_.
 
 Тип ::
 Значение поля с указанным именем будет использовано для обозначения типа
-компонента, например, _Резистор (Резисторы)_.
+компонента, например, _Резистор {Резисторы}_.
 
 Наименование ::
 Значение поля с указанным именем будет помещено в графу _Наименование_.
@@ -406,6 +406,12 @@ _Материалы_.
 Если же в значении параметра имеется хотя бы одна конструкция `${}`, то такое
 значение будет обработано как _шаблон_ и в спецификацию попадёт преобразованный
 текст с подставленными значениями указанных полей.
+
+*Примечание:* если значение для поля _Тип_ указано в виде шаблона, то к
+единственному/множественному числу будет приведено каждое значение из указанных
+полей. Если содержимое поля не соответствует формату `тип в единственном числе
+{тип в множественном числе}`, то это содержимое будет использоваться полностью
+как в единственном, так и в множественном числе.
 
 Для примера можно рассмотреть _Наименование_ в режиме совместимости с
 _kicadbom2spec_:
