Добавлены фильтры файлов при выборе списка цепей.

--- a/bom/Scripts/python/doc/help.adoc
+++ b/bom/Scripts/python/doc/help.adoc
@@ -443,7 +443,7 @@ _ВП_. +
 
 ---
 
-Добавить/удалить лист регистрации изменений ::
+Добавить/удалить лист рег. изм. ::
 запустить макрос создания/удаления листа регистрации изменений. +
 Если лист регистрации изменений отсутствует в документе, то он будет создан в
 виде последней страницы и отделён от таблицы ведомости разрывом страниц. +
