--- a/spec/Scripts/python/doc/help.adoc
+++ b/spec/Scripts/python/doc/help.adoc
@@ -503,7 +503,7 @@ _kicadbom2spec_ будут использованы данные о раздел
 
 ---
 
-Добавить/удалить лист регистрации изменений ::
+Добавить/удалить лист рег. изм. ::
 запустить макрос создания/удаления листа регистрации изменений. +
 Если лист регистрации изменений отсутствует в документе, то он будет создан в
 виде последней страницы и отделён от таблицы спецификации разрывом страниц. +
