--- a/index/Scripts/python/doc/help.adoc
+++ b/index/Scripts/python/doc/help.adoc
@@ -442,7 +442,7 @@ _Перечень элементов_. +
 
 ---
 
-Добавить/удалить лист регистрации изменений ::
+Добавить/удалить лист рег. изм. ::
 запустить макрос создания/удаления листа регистрации изменений. +
 Если лист регистрации изменений отсутствует в документе, то он будет создан в
 виде последней страницы и отделён от таблицы перечня разрывом страниц. +
