--- a/bom/Scripts/python/doc/help.adoc
+++ b/bom/Scripts/python/doc/help.adoc
@@ -494,8 +494,7 @@ _Перв. примен._
 защищены от перемещения, изменения размера и редактирования. Графы,
 предназначенные для ввода текста, защищены только от перемещения и изменения
 размера. Не все графы форматной рамки имеют врезки для ввода текста. Например,
-графы _Подп. и дата_, у левого края форматной рамки, врезок для ввода текста не
-имеют.
+графа _Подп._ основной надписи врезок для ввода текста не имеет.
 
 Все врезки основной надписи и форматной рамки принадлежат нижнему колонтитулу и
 хранятся в стиле страницы. Каждый стиль первого листа имеет свой собственный
