Автоматическое добавление листа регистрации изменений:
автоматическое добавление листа регистрации изменений в процессе
редактирования -- плохая идея.
Добавлять автоматически только при заполнении таблицы макроссом.

--- a/gbom/Scripts/python/doc/help.adoc
+++ b/gbom/Scripts/python/doc/help.adoc
@@ -76,7 +76,7 @@
 пользовательское поле, в котором хранится описание типа компонента,
 например, _Резистор {Резисторы}_. Значение этого поля указывается в графе
 _Наименование_ и выступает в виде заголовка однотипных компонентов. +
-В зависимости от параметров построения спецификации, тип компонента может
+В зависимости от параметров построения ведомости, тип компонента может
 указываться как в единственном, так и в множественном числе, поэтому формат
 поля _Тип_ имеет сложный вид: +
 `Тип в единственном числе {Тип в множественном числе}` +
@@ -95,7 +95,7 @@ _Наименование_ и выступает в виде заголовка 
 пользовательское поле. Содержимое указанного поля помещается в графу _Код ОКП_.
 Документ ::
 пользовательское поле, в котором указывается ГОСТ, ТУ или другой документ,
-относящийся к компоненту. Содержимое этого этого поля помещается в графу
+относящийся к компоненту. Содержимое этого поля помещается в графу
 _Обозначение документа на поставку_.
 Поставщик ::
 пользовательское поле. Содержимое указанного поля помещается в графу
@@ -195,7 +195,7 @@ _Поставщик_.
 
 === Ведомость
 Файл с данными о схеме ::
-В случае с KiCad, источником данных о схеме является файл списка цепей. +
+Источником данных о схеме является файл списка цепей KiCad. +
 Если файл не указан, то при запуске макроса `Построить ведомость` или
 `Заполнить осн. надпись` будет предпринята попытка найти файл списка цепей по
 имени файла проекта (ищется файл _*.pro_, заменяется расширение _pro_ на _net_
@@ -287,10 +287,9 @@ _Конденсаторы_ и т.д. +
 одна пустая строка.
 
 Добавить лист регистрации изменений, если количество листов больше ... ::
-Если отмечено и количество листов документа превышает указанное число, то в
-конец документа будет добавлен лист регистрации изменений. Если в процессе
-редактирования количество листов станет меньше указанного значения, то лист
-регистрации изменения будет удалён.
+Если отмечено и при автоматическом построения таблицы количество листов
+документа превысит указанное число, то в конец документа будет добавлен лист
+регистрации изменений.
 
 Запретить заголовки групп внизу страницы ::
 Если отмечено, то заголовки групп, находящиеся внизу страницы без единого
@@ -444,9 +443,6 @@ _ВП_. +
 Если лист регистрации изменений отсутствует в документе, то он будет создан в
 виде последней страницы и отделён от таблицы ведомости разрывом страниц. +
 В противном случае -- лист регистрации изменений будет удалён из документа.
-
-NOTE: При выполнении данной команды отключается параметр _Добавить лист
-регистрации изменений, если количество листов больше ..._!
 
 ---
 
