--- a/spec/Scripts/python/doc/help.adoc
+++ b/spec/Scripts/python/doc/help.adoc
@@ -196,7 +196,7 @@ _Наименование_ и выступает в виде заголовка 
 
 === Спецификация
 Файл с данными о схеме ::
-В случае с KiCad, источником данных о схеме является файл списка цепей. +
+Источником данных о схеме является файл списка цепей KiCad. +
 Если файл не указан, то при запуске макроса `Построить специф.` или
 `Заполнить осн. надпись` будет предпринята попытка найти файл списка цепей по
 имени файла проекта (ищется файл _*.pro_, заменяется расширение _pro_ на _net_
@@ -299,10 +299,9 @@ _Конденсаторы_ и т.д. +
 одна пустая строка.
 
 Добавить лист регистрации изменений, если количество листов больше ... ::
-Если отмечено и количество листов документа превышает указанное число, то в
-конец документа будет добавлен лист регистрации изменений. Если в процессе
-редактирования количество листов станет меньше указанного значения, то лист
-регистрации изменения будет удалён.
+Если отмечено и при автоматическом построения таблицы количество листов
+документа превысит указанное число, то в конец документа будет добавлен лист
+регистрации изменений.
 
 Запретить заголовки групп внизу страницы ::
 Если отмечено, то заголовки групп, находящиеся внизу страницы без единого
@@ -508,9 +507,6 @@ _kicadbom2spec_ будут использованы данные о раздел
 Если лист регистрации изменений отсутствует в документе, то он будет создан в
 виде последней страницы и отделён от таблицы спецификации разрывом страниц. +
 В противном случае -- лист регистрации изменений будет удалён из документа.
-
-NOTE: При выполнении данной команды отключается параметр _Добавить лист
-регистрации изменений, если количество листов больше ..._!
 
 ---
 
