--- a/gbom/Scripts/python/doc/help.adoc
+++ b/gbom/Scripts/python/doc/help.adoc
@@ -12,7 +12,7 @@
 = Групповая ведомость покупных изделий
 :author: Барановский Константин
 :email: baranovskiykonstantin@gmail.com
-:revnumber: 1.2
+:revnumber: 1.3
 
 Справочное руководство
 
@@ -306,6 +306,13 @@ _Конденсаторы_ и т.д. +
 * _Обозначение документа на поставку_
 * _Поставщик_
 * _Примечание_
+
+"Посад.место" без наименования библиотеки ::
+Поле _Посад.место_ содержит значение в формате
+`Наименование_библиотеки:Посад_место`. +
+Если отмечено, то из значения поля _Посад.место_ будет удаляться наименование
+библиотеки включительно с двоеточием, оставляя только наименование посадочного
+места.
 
 
 === Поля
