--- a/spec/Scripts/python/doc/help.adoc
+++ b/spec/Scripts/python/doc/help.adoc
@@ -12,7 +12,7 @@
 = Спецификация
 :author: Барановский Константин
 :email: baranovskiykonstantin@gmail.com
-:revnumber: 1.2
+:revnumber: 1.3
 
 Справочное руководство
 
@@ -309,6 +309,13 @@ _Конденсаторы_ и т.д. +
 
 Запретить пустые строки вверху страницы ::
 Если отмечено, то пустые строки вверху страницы будут удалены.
+
+"Посад.место" без наименования библиотеки ::
+Поле _Посад.место_ содержит значение в формате
+`Наименование_библиотеки:Посад_место`. +
+Если отмечено, то из значения поля _Посад.место_ будет удаляться наименование
+библиотеки включительно с двоеточием, оставляя только наименование посадочного
+места.
 
 
 === Разделы
