"Посад.место!" - посад.место без наим. библиотеки.

--- a/spec/Scripts/python/doc/help.adoc
+++ b/spec/Scripts/python/doc/help.adoc
@@ -160,6 +160,18 @@ _Наименование_ и выступает в виде заголовка 
 * *Посад.место*
 * *Документация*
 
+[NOTE]
+====
+
+Если указать _Посад.место_ с восклицательным знаком в конце `Посад.место!`, то
+из значения этого поля будет удалено наименование библиотеки, оставив только
+наименование посадочного места. +
+Обратите внимание, имеется параметр
+_"Посад.место" без наименования библиотеки_, который выполняет такую же
+функцию, но применяется ко всем полям _Посад.место_.
+
+====
+
 Шаблоны в стандартных полях тоже обрабатываются.
 
 Рассмотрим пример шаблона для поля _Наименование_ резистора:
