Новое стандартное поле "Описание":
"Описание" не является полем компонента (это строка описания из
библиотеки компонентов), но доступ к нему выполняется как к стандартному
полю.

--- a/bom/Scripts/python/doc/help.adoc
+++ b/bom/Scripts/python/doc/help.adoc
@@ -162,6 +162,7 @@ _Куда входит (обозначение)_.
 * *Значение*
 * *Посад.место*
 * *Документация*
+* *Описание*
 
 [NOTE]
 ====
@@ -172,6 +173,14 @@ _Куда входит (обозначение)_.
 Обратите внимание, имеется параметр
 _"Посад.место" без наименования библиотеки_, который выполняет такую же
 функцию, но применяется ко всем полям _Посад.место_.
+
+====
+
+[NOTE]
+====
+
+_Описание_ не является полем компонента. Это описание элемента из библиотеки
+компонентов, но доступ к нему выполняется как к стандартному полю.
 
 ====
 
