--- a/gbom/Scripts/python/doc/help.adoc
+++ b/gbom/Scripts/python/doc/help.adoc
@@ -158,6 +158,7 @@ _Поставщик_.
 * *Значение*
 * *Посад.место*
 * *Документация*
+* *Описание*
 
 [NOTE]
 ====
@@ -168,6 +169,14 @@ _Поставщик_.
 Обратите внимание, имеется параметр
 _"Посад.место" без наименования библиотеки_, который выполняет такую же
 функцию, но применяется ко всем полям _Посад.место_.
+
+====
+
+[NOTE]
+====
+
+_Описание_ не является полем компонента. Это описание элемента из библиотеки
+компонентов, но доступ к нему выполняется как к стандартному полю.
 
 ====
 
