--- a/gspec/Scripts/python/doc/help.adoc
+++ b/gspec/Scripts/python/doc/help.adoc
@@ -160,6 +160,7 @@ _Наименование_ и выступает в виде заголовка 
 * *Значение*
 * *Посад.место*
 * *Документация*
+* *Описание*
 
 [NOTE]
 ====
@@ -170,6 +171,14 @@ _Наименование_ и выступает в виде заголовка 
 Обратите внимание, имеется параметр
 _"Посад.место" без наименования библиотеки_, который выполняет такую же
 функцию, но применяется ко всем полям _Посад.место_.
+
+====
+
+[NOTE]
+====
+
+_Описание_ не является полем компонента. Это описание элемента из библиотеки
+компонентов, но доступ к нему выполняется как к стандартному полю.
 
 ====
 
