--- a/spec/Scripts/python/doc/help.adoc
+++ b/spec/Scripts/python/doc/help.adoc
@@ -159,6 +159,7 @@ _Наименование_ и выступает в виде заголовка 
 * *Значение*
 * *Посад.место*
 * *Документация*
+* *Описание*
 
 [NOTE]
 ====
@@ -169,6 +170,14 @@ _Наименование_ и выступает в виде заголовка 
 Обратите внимание, имеется параметр
 _"Посад.место" без наименования библиотеки_, который выполняет такую же
 функцию, но применяется ко всем полям _Посад.место_.
+
+====
+
+[NOTE]
+====
+
+_Описание_ не является полем компонента. Это описание элемента из библиотеки
+компонентов, но доступ к нему выполняется как к стандартному полю.
 
 ====
 
