Ведомость покупных изделий: новый параметр осн. надписи
позволяет использовать имя файла ведомости в качестве типа документа при
автоматическом заполнении основной надписи.

--- a/gbom/Scripts/python/doc/help.adoc
+++ b/gbom/Scripts/python/doc/help.adoc
@@ -442,6 +442,13 @@ _ВП_. +
 исполнение_ будет указано обозначение документа. +
 В противном случае, графа останется без изменений.
 
+Использовать имя файла в качестве типа документа ::
+Если отмечено, и активен параметр _Преобразовать наименование документа_,
+то в качестве типа документа будет указано имя файла. +
+Например, если при создании ведомости ей было присвоено имя _Ведомость
+покупных ЭРЭ.odt_, то при заполнении основной надписи вместо _Ведомость
+покупных изделий_ будет указано _Ведомость покупных ЭРЭ_.
+
 
 == Панель инструментов
 
