--- a/bom/Scripts/python/doc/help.adoc
+++ b/bom/Scripts/python/doc/help.adoc
@@ -446,6 +446,13 @@ _ВП_. +
 документа без кода документа. +
 В противном случае, графа останется без изменений.
 
+Использовать имя файла в качестве типа документа ::
+Если отмечено, и активен параметр _Преобразовать наименование документа_,
+то в качестве типа документа будет указано имя файла. +
+Например, если при создании ведомости ей было присвоено имя _Ведомость
+покупных ЭРЭ.odt_, то при заполнении основной надписи вместо _Ведомость
+покупных изделий_ будет указано _Ведомость покупных ЭРЭ_.
+
 
 == Панель инструментов
 
