Спецификация: ведомость в разделе "Документация"
Добавлен параметр позволяющий указывать ведомость покупных изделий в
разделе Документация при формировании спецификации.
Наименование ведомости можно редактировать.

--- a/gspec/Scripts/python/doc/help.adoc
+++ b/gspec/Scripts/python/doc/help.adoc
@@ -374,6 +374,21 @@ _Документация_.
 
 ====
 
+Ведомость покупных изделий ::
+Если отмечено, то при формировании спецификации в разделе _Документация_ будет
+указана ведомость покупных изделий.
+
+====
+
+Для ведомости покупных изделий всегда указывается формат _А3_. +
+В графе _Обозначение_ указывается децимальный номер схемы с кодом документа
+`ВП`. +
+Наименование ведомости можно изменять, например - _Ведомость покупных ЭРЭ_. +
+Если поле оставить пустым, будет указано наименование по умолчанию _Ведомость
+покупных изделий_.
+
+====
+
 Сборочные единицы ::
 Если отмечено, то при формировании спецификации будет создан раздел _Сборочные
 единицы_.
